--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+astroid==1.4.4
+beautifulsoup4==4.4.1
+colorama==0.3.6
+croniter==0.3.11
 flake8==2.4.1
+lazy-object-proxy==1.2.1
 mccabe==0.3
 pep8==1.5.7
+py==1.4.30
 pyflakes==0.8.1
+pylint==1.5.4
+pytest==2.7.2
+python-dateutil==2.4.2
+PyYAML==3.11
 requests==2.7.0
+six==1.10.0
 SQLAlchemy==1.0.4
+wrapt==1.10.6
 ws4py==0.3.4
-croniter==0.3.11
